--- a/buildspec copy.yml
+++ b/buildspec copy.yml
@@ -9,7 +9,10 @@ phases:
   build:
     commands:
       - echo "Zipping deployment package..."
-      - zip -9 deployment_package.zip lambda_function.py
+      - cd lib
+      - zip -r9 ../deployment_package.zip .
+      - cd ..
+      - zip -g deployment_package.zip lambda_function.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
