implemented dynamo code (1)

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
   build:
     commands:
       - echo "Zipping deployment package..."
-      - zip -9 deployment_package.zip lambda_function.py
+      - zip -9 deployment_package.zip lambda_function.py custom_encoder.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
